<resources>
<!--    <string name="app_name">RilinkShop</string>-->

    <string name="proj_scheme">hpay</string>
    <string name="proj_scheme_host">payment</string>
    <string name="proj_scheme_home_main">home</string>
    <string name="proj_scheme_account_trade">trade</string>

    <string name="main_func_home">首頁</string>
    <string name="main_point_start">購物商城</string>
    <string name="main_business">商家據點</string>
    <string name="main_member">會員中心</string>
    <string name="main_page">票卷</string>
    <string name="service_type">服務類型</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_buyCar">加入購物車</string>
    <string name="add_buyNow">立即結帳</string>
    <string name="cart_terms">勾選確認代表已詳細閱讀並接受<font color="#FFF96650">購物條款</font></string>
    <string name="pd_pack">回上一步驟</string>
    <string name="pd_play">確認結帳</string>
    <string name="pdData">收件資訊</string>
    <string name="can_Use_Point">可使用點數:</string>
    <string name="use_point">使用點數:</string>
    <string name="pd_11">優惠卷</string>
    <string name="pd_14">紅利點數折抵 本單可折抵 $0</string>
    <string name="pd_15">* 配送開立發票方式</string>
    <string name="pd_21">發票資料</string>
    <string name="pd_22">響應電子化發票，發票將寄送至您的E-MAIL。提醒您，發票一旦開立，不得任意更改或改開發票。</string>
    <string name="pd_23">載具號碼</string>
    <string name="pd_24">說明綁定後，即可自動將發票存入財政部手機條碼。如因輸入資料錯誤所致損害，本公司恕不負責。</string>
    <string name="pd_25"> 公司行號抬頭</string>
    <string name="pd_26">   統一編號</string>
    <string name="pd_2501">   請輸入公司行號抬頭</string>
    <string name="pd_2601">   請輸入統一編號</string>
    <string name="mo_id">訂單編號:</string>
    <string name="mo_date">訂單日期:</string>
    <string name="mo_dollar">訂單金額:</string>
    <string name="mo_status">訂單狀態:</string>
    <string name="pay_status">付款狀態:</string>
    <string name="commodity_des">棉花糖壓</string>
    <string name="delieve">配送方式:</string>
    <string name="mo_pay">立即付款</string>
    <string name="mo_view">查看詳情</string>
    <string name="account_listitem_order">商城訂單</string>
    <string name="text_status">處理中</string>
    <string name="title_myorder">我的訂單</string>
    <string name="title_is">使用者消費權益ＱＡ</string>
    <string name="pd_211">* E-mail</string>
    <string name="pd_16">商品合計</string>
    <string name="pd_19">點數折抵</string>
    <string name="pd_20">應付金額合計</string>
    <string name="pd_money0">$ 1,000</string>
    <!-- 會員首頁選項清單 -->
    <string name="account_listitem_front">首頁</string>
    <string name="account_listitem_data">會員資料</string>
    <string name="account_listitem_point">紅利點數紀錄</string>
    <string name="account_listitem_record">我的訂單</string>
    <string name="account_listitem_packer">我的票卷</string>
    <string name="account_listitem_rule">協議及聲明</string>
    <string name="account_listitem_qa">常見問題</string>
    <string name="account_listitem_cs">聯絡客服</string>
    <string name="memberheart">會員中心</string>
    <string name="account_listitem_mypoint">我的紅利點數</string>
    <string name="time">時段預約</string>
    <string name="appointment_confirmation">預約確認</string>

    <string name="trade_record_not_found">暫無交易記錄</string>


    <string name="title_mall">購物商城</string>
    <string name="title_store">商家據點</string>
    <string name="title_account">會員中心</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_readName">資料填寫</string>

    <string name="canUse">可使用</string>
    <string name="canNouse">已使用</string>


    <string name="rule_msg">
        001
        \nApp隱私權政策聲明\n
非常歡迎您下載本App，為了讓您能夠安心使用本
App的各項服務與資訊，特此向您說明本App的隱
私權保護政策，以保障您的權益，請您詳閱下列
內容：\n
\n
一、隱私權保護政策的適用範圍\n
隱私權保護政策內容，包括本App如何處理在您使
用App服務時收集到的個人識別資料。隱私權保護
政策不適用於本App以外的相關連結外部網頁，也
不適用於非本App所委託或參與管理的人員。
\n
二、個人資料的蒐集、處理及利用方式\n
本App將向使用者蒐集以下個人資料。若您拒絕提
供，將無法提供您使用本 APP 相關服務：
當您登入使用本App時，根據本App提供服務性質
不同，我們會請您提供個人資訊，包括：帳號、
密碼、電話、及其他相關必要資料。
於一般連線時，伺服器會自行記錄相關行徑，包
括您使用連線設備的IP位址、使用時間、使用的作
業系統、瀏覽及點選資料記錄等，做為我們增進
App服務的參考依據，此記錄為內部應用，決不對外公佈。
\n
三、資料之保護\n
本App主機均設有防火牆、防毒系統等相關的各項
資訊安全設備及必要的安全防護措施，加以保護
    </string>


    <string name="welcome_back">歡迎回來</string>
    <string name="mobile_number">手機號碼</string>
    <string name="home_number">家裡號碼</string>
    <string name="home_number_hint">請輸入您家裡的電話號碼</string>
    <string name="mobile_number_hint">請輸入您的手機號碼</string>
    <string name="mobile_number_ht">請輸入您的帳號</string>
    <string name="password">密碼</string>
    <string name="password_hint">請輸入您的密碼</string>
    <string name="forget_password"><u>忘記密碼?</u></string>
    <string name="user_rule"><u>使用者條款與須知</u></string>

    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="register">註冊</string>
    <string name="account_rule">會員使用條款</string>

    <string name="welcome_register">歡迎加入會員</string>
    <string name="name">姓名</string>
    <string name="name_hint">請輸入您的姓名</string>
    <string name="email">Email信箱</string>
    <string name="email_hint">請輸入您的Email信箱</string>
    <string name="mobile_number_hint_for_register">請輸入您的手機號碼作為往後的登入帳號</string>
    <string name="password_hint_for_register">請輸入6–12位英數密碼</string>
    <string name="invite_code">邀請碼</string>
    <string name="invite_code_hint">請輸入好友邀請碼</string>
    <string name="register_agree_check_title">我同意以此資料註冊會員，並同意</string>
    <string name="button_account_rule"><font color="#202020">我同意以此資料註冊會員，並同意</font><font color="#00ADAD"><u>會員使用條款</u></font></string>
    <string name="register_fail">註冊失敗</string>
    <string name="account_already_exist">帳號已存在</string>
    <string name="button_register">註冊會員</string>

    <string name="sex">性別</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">請輸入您的生日ex:2000-08-08</string>


    <string name="forget_password_title">忘記密碼</string>
    <string name="reset_password_title">請重新設定您的新密碼</string>
    <string name="identity_code">驗證碼</string>
    <string name="identity_code_hint">請輸入驗證碼</string>
    <string name="button_identity_code">獲取驗證碼</string>
    <string name="new_password">新密碼</string>
    <string name="new_password2">再次輸入新密碼</string>
    <string name="new_password2_hint">請輸入新密碼</string>
    <string name="button_send">送出</string>
    <string name="minute_seconds">%1$02d：%2$02d</string>

    <string name="point_get">獲取紅利</string>
    <string name="point_cancel">取消紅利</string>
    <string name="point_used">使用紅利</string>
    <string name="point_record">點數記錄</string>
    <string name="point_note">註:最多顯示一年之內的資料</string>
    <string name="point_record_not_found">暫無點數記錄</string>

    <string name="button_modify_data">儲存變更</string>

    <string name="copy">複製</string>
    <string name="cut">裁切</string>
    <string name="camera">照相</string>
    <string name="gallery">圖庫</string>

    <string name="title_home">  </string>

    <string name="title_shop_terms">購物條款</string>
    <string name="title_commodity">商品</string>
    <string name="title_shopcart">購物車</string>
    <string name="title_pay_data">填寫付款資料</string>

    <string-array name="pd_001">



        <item>
            郵寄
    </item>
    </string-array>
    <string-array name="pd_1501">
        <item>
            個人電子發票
        </item>
        <item>
            手機載具
        </item>
        <item>
         統一編號電子發票
        </item>


    </string-array>


    <string name="store_id">My Application</string>
    <string-array name="planets_array">
        <item>選擇店家</item>
        <item>test</item>
        <item>test2</item>
        <item>test3</item>
        <item>Max測試</item>
    </string-array>
    <string name="title_activity_main_store_manager">Leanback MainActivityStoreManager</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>


</resources>