<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f0"
    tools:context=".ui.account.AccountLoginFragment">
    <!--    style="@style/Fragment_Account"-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_thirty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_thirty">

        <TextView
            android:id="@+id/tv_phone_label"
            style="@style/EditWithLabelView_Label"
            android:layout_margin="10dp"
            android:text="@string/mobile_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_phone"
                style="@style/EditWithLabelView_Data"
                android:hint="@string/mobile_number_hint"
                android:paddingStart="10dp"
                android:inputType="phone"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_home_number_label"
            style="@style/EditWithLabelView_Label"
            android:layout_margin="10dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_phone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_home_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_number_label"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/txtcolor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_home_number"
                style="@style/EditWithLabelView_Data"
                android:hint="@string/password_hint"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/editwithlabel_top_margin"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_home_number" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="331dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_mid">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_xpos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_button_horizontal_margin"
            android:layout_marginEnd="@dimen/normal_button_horizontal_margin"
            android:background="@drawable/shape_round_orange"
            app:layout_constraintDimensionRatio="@dimen/normal_two_button_dimension_ratio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:background="@null"
                android:drawablePadding="10dp"

                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_button_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/normal_button_horizontal_margin"
            android:background="@drawable/shape_round_orange"
            app:layout_constraintDimensionRatio="@dimen/normal_two_button_dimension_ratio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:background="@null"
                android:drawablePadding="10dp"

                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txv_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_rule"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl" />

</androidx.constraintlayout.widget.ConstraintLayout>